Feature: create user integration test
- Add notation to dtos
- Add test properties file to gitignore
- Add testCreateUser method

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ mvnw.cmd
 !/src/main/resources/application.yaml
 /src/main/resources/application.yaml
 src/main/resources/.env
+/src/main/resources/application-test.yaml
