--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ mvnw.cmd
 /src/main/resources/application.yaml
 src/main/resources/.env
 /src/main/resources/application-test.yaml
+/src/test/java/resources/application-test.yaml
